2011-06-02  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* R/read.R (fp.read): Updated line functions to return a third
	component that can be used to return the remainder of a line if a
	format allows other items than just a title and fingerprint.

2011-06-01  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* src/readfps.c (parse_hex): Added a C function to parse
	hex-encoded fingerprints from the FPS format and return the bit
	positions that are set to 1

	* R/read.R (fps.lf): Added a new line parser to handle the
	fingerprint lines from the FPS format
	(fp.read): Updated main fingerprint reader to handle the
	multi-line header from FPS format fingerprint files

2011-04-14  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* R/bitspec.R (shannon): Added a method to evaluate the Shannon
	entropy for a list of fingerprints. Also added a man page

2010-11-07  Rajarshi Guha  <guhar@hmmercadowiwxp.od.nih.gov>

	* R/read.R: Updaetd the CDK line parser to extract the 
	molecule id and return it so that the fingerpint object
	contains the molecule id

2010-10-20  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* R/read.R (fp.read): Updated to support reading of feature
	fingerprints. The user must now indicate whether a binary or a
	feature fingerprint is being read. Also added a new line parsing
	function to process generic feature fingerprints.

	* R/misc.R: Added similarity metrics for feature
	fingerprints. Currently tanimoto, dice and robust metrics are
	supported. 

	* R/featurefp.R: Added a class to support fingerprints that are
	represented as lists of numeric or string features such as
	circular fingerprints. Also added a method to convert a collection
	of feature fingerprints to a fixed-length binary string
	representation. 

	* man/featvec.Rd: Added man page for te featvec class, used to
	represent fingerprints characterized as numeric or character
	features
	

2010-06-02  Rajarshi  Guha  <rguha@Macintosh-5.local>
